# friday

./: Cargo.toml  README.md
abi/src/: lib.rs  types.rs
abi/src/types/: dto.rs  entity.rs
abi/src/types/dto/: user_dto.rs
abi/src/types/entity/: user.rs
apiserver/: Cargo.toml
apiserver/src/: controller.rs  lib.rs  main.rs  tests.rs
apiserver/src/controller/: user.rs  user_controller.rs
hello-actixweb/: Cargo.toml
hello-actixweb/src/: main.rs  router.rs  tests.rs
hello-axum/: Cargo.toml
hello-axum/src/: main.rs  router.rs  tests.rs
hello-diesel/: .env  Cargo.toml  README.md
hello-diesel/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
hello-diesel/migrations/2024-02-26-171235_create_posts/: up.sql
hello-diesel/migrations/2024-02-26-171459_create_posts/: down.sql  up.sql
hello-diesel/src/: lib.rs  models.rs  schema.rs
hello-jwt/: Cargo.toml
hello-jwt/src/: lib.rs  main.rs  tests.rs
hello-rocket/: Cargo.toml
hello-rocket/src/: main.rs  router.rs  tests.rs
hello-sqlite3/: Cargo.toml  test.db
hello-sqlite3/migrations/2024-02-27-162735_create_posts/: down.sql  up.sql
hello-sqlite3/src/: lib.rs  models.rs  schema.rs
hello/src/: main.rs
repository/: Cargo.toml
repository/src/: lib.rs  user.rs  user_repository.rs
service/: Cargo.toml
service/src/: lib.rs  user.rs  user_service.rs
